<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.android.reseller.GoogleInActivity"
    tools:showIn="@layout/activity_google_in">

    <ImageView
        android:id="@+id/googleProfileImage"
        android:layout_width="104dp"
        android:layout_height="79dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

    <TextView
        android:id="@+id/googleEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleProfileImage"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/googleStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="212dp"
        android:text="@string/textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleEmailText"
        app:layout_constraintVertical_bias="0.562" />

    <Button
        android:id="@+id/action_googleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="googleSignIn"
        android:text="@string/google_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleStatusText"
        app:layout_constraintVertical_bias="0.206" />

    <Button
        android:id="@+id/action_googleLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="googleSignOut"
        android:text="@string/google_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_googleLogin" />
</android.support.constraint.ConstraintLayout>
